--- a/index.html
+++ b/index.html
@@ -1,67 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pankaj Mittal | Senior Software Developer</title>
-<meta name="description" content="Senior Java Developer | Spring Boot | Kubernetes | Microservices">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<style>
-body {font-family:'Poppins',sans-serif;margin:0;padding:0;line-height:1.6;background:#f9f9f9;color:#333;}
-header {background:#222;color:#fff;padding:2rem 1rem;text-align:center;}
-header h1{margin:0;}
-nav{margin-top:1rem;}
-nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:500;}
-section{max-width:900px;margin:2rem auto;padding:1rem;background:#fff;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,0.1);}
-h2{border-bottom:2px solid #eee;padding-bottom:.3rem;color:#222;}
-ul{padding-left:1.2rem;}
-footer{text-align:center;padding:1rem;background:#222;color:#fff;margin-top:2rem;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pankaj Mittal | Senior Software Developer</title>
+  <meta name="description" content="Senior Java Developer | Spring Boot | Kubernetes | Microservices">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f8f9fa;
+      color: #333;
+    }
+    header {
+      background: #1e1e2f;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      font-size: 1.1rem;
+      margin-top: 0.5rem;
+    }
+    nav {
+      margin-top: 1rem;
+    }
+    nav a {
+      color: #ddd;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: 500;
+    }
+    nav a:hover {
+      color: #00b4d8;
+    }
+    section {
+      max-width: 950px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.08);
+    }
+    h2 {
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.4rem;
+      color: #222;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      background: #1e1e2f;
+      color: #ccc;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+    .contact a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+    .contact a:hover {
+      text-decoration: underline;
+    }
+    .btn {
+      display: inline-block;
+      background: #00b4d8;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 5px;
+      text-decoration: none;
+      margin-top: 0.5rem;
+    }
+    .btn:hover {
+      background: #0077b6;
+    }
+
+    /* --- Skill Badges --- */
+    .badges {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+    .badge {
+      padding: 6px 12px;
+      border-radius: 20px;
+      color: white;
+      font-size: 0.9rem;
+      font-weight: 500;
+    }
+    .badge.java { background-color: #e67e22; }
+    .badge.spring { background-color: #2ecc71; }
+    .badge.docker { background-color: #2496ED; }
+    .badge.k8s { background-color: #326CE5; }
+    .badge.aws { background-color: #FF9900; }
+    .badge.angular { background-color: #DD0031; }
+    .badge.microservices { background-color: #6c63ff; }
+
+    /* --- Progress Bars --- */
+    .skill {
+      margin-bottom: 15px;
+    }
+    .skill p {
+      margin: 0 0 6px;
+      font-weight: 500;
+    }
+    .progress {
+      background-color: #eee;
+      border-radius: 25px;
+      overflow: hidden;
+      height: 20px;
+    }
+    .progress-bar {
+      background: linear-gradient(90deg, #00b4d8, #0077b6);
+      height: 100%;
+      text-align: right;
+      padding-right: 8px;
+      color: white;
+      font-size: 0.8rem;
+      line-height: 20px;
+      border-radius: 25px 0 0 25px;
+      transition: width 1s ease-in-out;
+    }
+  </style>
 </head>
 <body>
-<header>
-<h1>Pankaj Mittal</h1>
-<p>Senior Software Developer | Spring Boot | Kubernetes | Microservices</p>
-<nav>
-<a href="#about">About</a>
-<a href="#skills">Skills</a>
-<a href="#projects">Projects</a>
-<a href="#contact">Contact</a>
-</nav>
-</header>
 
-<section id="about">
-<h2>About Me</h2>
-<p>I’m a Senior Software Developer with 9+ years of experience building scalable backend systems using Spring Boot, Docker, and Kubernetes. I enjoy designing microservice architectures, optimizing APIs, and mentoring teams on cloud-native best practices.</p>
-</section>
+  <header>
+    <h1>Pankaj Mittal</h1>
+    <p>Senior Software Developer | Spring Boot | Kubernetes | Microservices</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#experience">Experience</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<section id="skills">
-<h2>Technical Skills</h2>
-<ul>
-<li><b>Backend:</b> Java, Spring Boot, Microservices</li>
-<li><b>DevOps:</b> Docker, Kubernetes, Jenkins, OpenShift</li>
-<li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-<li><b>Frontend:</b> Angular, TypeScript</li>
-<li><b>Tools:</b> Git, Maven, ELK, Prometheus</li>
-</ul>
-</section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I’m a Senior Software Developer with 9+ years of experience designing and developing scalable enterprise systems. I specialize in Java, Spring Boot, Docker, and Kubernetes, and I’m passionate about building reliable microservices and automating DevOps pipelines. My goal is to create clean, efficient, and production-ready software solutions.</p>
+    <a class="btn" href="PankajMittal_Resume.pdf" target="_blank">Download Resume</a>
+  </section>
 
-<section id="projects">
-<h2>Highlighted Projects</h2>
-<ul>
-<li><b>Centralized Logging System:</b> Built ELK stack integration for Spring Boot microservices, reducing debug time by 60%.</li>
-<li><b>Kubernetes Deployment Pipeline:</b> Automated CI/CD using Jenkins and Helm charts on OpenShift.</li>
-<li><b>Chat App:</b> Developed real-time communication using WebSocket (Spring Boot + Angular).</li>
-</ul>
-</section>
+  <section id="skills">
+    <h2>Technical Skills</h2>
 
-<section id="contact">
-<h2>Contact Me</h2>
-<p>Email: <a href="mailto:pankaj.mittal@gmail.com">pankaj.mittal@gmail.com</a></p>
-<p>LinkedIn: <a href="https://linkedin.com/in/pankajmittal" target="_blank">linkedin.com/in/pankajmittal</a></p>
-<p>GitHub: <a href="https://github.com/pankajmittal" target="_blank">github.com/pankajmittal</a></p>
-</section>
+    <h3>Core Technologies</h3>
+    <div class="badges">
+      <span class="badge java">Java</span>
+      <span class="badge spring">Spring Boot</span>
+      <span class="badge microservices">Microservices</span>
+      <span class="badge docker">Docker</span>
+      <span class="badge k8s">Kubernetes</span>
+      <span class="badge aws">AWS</span>
+      <span class="badge angular">Angular</span>
+    </div>
 
-<footer>© 2025 Pankaj Mittal. All Rights Reserved.</footer>
+    <h3>Expertise Level</h3>
+    <div class="skill">
+      <p>Backend Architecture</p>
+      <div class="progress"><div class="progress-bar" style="width: 95%;">95%</div></div>
+    </div>
+    <div class="skill">
+      <p>Microservices & DevOps</p>
+      <div class="progress"><div class="progress-bar" style="width: 90%;">90%</div></div>
+    </div>
+    <div class="skill">
+      <p>Cloud & CI/CD Automation</p>
+      <div class="progress"><div class="progress-bar" style="width: 85%;">85%</div></div>
+    </div>
+    <div class="skill">
+      <p>Frontend (Angular)</p>
+      <div class="progress"><div class="progress-bar" style="width: 70%;">70%</div></div>
+    </div>
+  </section>
+
+  <section id="projects">
+    <h2>Highlighted Projects</h2>
+    <ul>
+      <li><strong>Centralized Logging Platform (ELK + Spring Boot):</strong> Integrated ELK stack across 20+ microservices to enable real-time logging and error tracing, reducing debugging time by 60%.</li>
+      <li><strong>Kubernetes Deployment Automation:</strong> Built CI/CD pipelines using Jenkins and Helm charts for automated Kubernetes deployment, improving release reliability.</li>
+      <li><strong>WebSocket Chat Application:</strong> Developed real-time chat using Spring Boot and Angular with WebSocket integration, handling 10K+ concurrent users.</li>
+      <li><strong>API Performance Optimization:</strong> Improved API response time by 45% through asynchronous calls and Redis caching.</li>
+    </ul>
+  </section>
+
+  <section id="experience">
+    <h2>Professional Experience</h2>
+
+    <h3>Senior Software Developer — ABC Tech Pvt Ltd (2019–Present)</h3>
+    <ul>
+      <li>Architected and implemented scalable Spring Boot microservices for a financial application handling 2M+ users.</li>
+      <li>Implemented centralized monitoring using ELK and Prometheus for production systems.</li>
+      <li>Mentored junior developers and improved team code quality via code reviews and automation practices.</li>
+    </ul>
+
+    <h3>Software Developer — XYZ Systems (2015–2019)</h3>
+    <ul>
+      <li>Developed REST APIs and batch systems for core business modules using Spring Boot and MySQL.</li>
+      <li>Built Dockerized services and contributed to Kubernetes migration initiative.</li>
+    </ul>
+  </section>
+
+  <section id="certifications">
+    <h2>Certifications & Achievements</h2>
+    <ul>
+      <li>AWS Certified Developer – Associate</li>
+      <li>Oracle Certified Java Programmer (OCJP)</li>
+      <li>Recognized as “Outstanding Contributor” for microservices transformation initiative</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>📧 Email: <a href="mailto:pankaj.mittal@gmail.com">pankaj.mittal@gmail.com</a></p>
+    <p>💼 LinkedIn: <a href="https://linkedin.com/in/pankajmittal" target="_blank">linkedin.com/in/pankajmittal</a></p>
+    <p>💻 GitHub: <a href="https://github.com/pankajmittal" target="_blank">github.com/pankajmittal</a></p>
+  </section>
+
+  <footer>
+    © 2025 Pankaj Mittal. All Rights Reserved.
+  </footer>
+
 </body>
 </html>
