Update badges in index.html for technologies

--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@
       <span class="badge java">Java</span>
       <span class="badge spring">Spring Boot</span>
       <span class="badge micro">Microservices</span>
-      <span class="badge kafka">Kafka</span>
+      <span class="badge k8s">Spring Data Jpa</span>
+      <span class="badge kafka">Apache Kafka</span>
+      
       <span class="badge docker">Docker</span>
-      <span class="badge k8s">Kubernetes</span>
+      
       <span class="badge git">Git</span>
       <span class="badge jenkins">Jenkins</span>
       <span class="badge sql">PL/SQL</span>
